# chalk

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  capacitor.config.ts  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.claude/: launch.json
.github/workflows/: cd.yml  ci.yml
coding-agent/: agent.ts  package-lock.json  package.json  tsconfig.json
mobile/: README.md
public/: admin.html  index.html  voice.js
public/css/: 01-base.css  02-auth.css  03-nav.css  04-layout.css  05-match.css  06-games.css  07-calls.css  08-discover.css  09-chat.css  10-global-chat.css  11-profile.css  12-onboarding.css  13-modals.css  14-chat-extras.css  15-features.css  16-servers.css  17-settings.css  18-responsive.css  19-animations.css  20-customizer.css  style.css
public/js/: add-friend.js  admin.js  ai-call.js  auth.js  battleship.js  bots.js  call-audio.js  call-collab.js  call-games.js  call-video.js  call-volume.js  call-watch.js  call.js  chalkrun.js  chat-background.js  chat-pin-forward.js  chat-reactions.js  chat-send.js  chats.js  (+42 more)
scripts/: build-client.mjs
src/: index.js  index.ts  worker.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: migrate.js
test/: env.test.js  env.test.ts  health.test.js  health.test.ts  links.test.js  links.test.ts  validation.test.js  validation.test.ts
(+271 files in other folders)
