[package]
name = "chalk-desktop"
version = "1.0.0"
description = "Chalk Desktop — find your teammate"
authors = ["Chalk"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "chalk_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
